--- a/index.html
+++ b/index.html
@@ -181,69 +181,70 @@
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="d-flex flex-column flex-md-row gap-1">
+              <div class="row g-1">
                 <img
                   src="assets/img/media0.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
+
                 <img
                   src="assets/img/media1.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media2.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media3.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media4.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media5.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
               </div>
             </div>
             <div class="carousel-item">
-              <div class="d-flex flex-column flex-md-row gap-1">
+              <div class="row g-1">
                 <img
                   src="assets/img/media0.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media1.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media2.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media3.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media4.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media5.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
               </div>
@@ -282,69 +283,69 @@
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="d-flex flex-column flex-md-row gap-1">
+              <div class="row g-1">
                 <img
                   src="assets/img/media6.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media7.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media8.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media9.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media10.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media11.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
               </div>
             </div>
             <div class="carousel-item">
-              <div class="d-flex flex-column flex-md-row gap-1">
+              <div class="row g-1">
                 <img
                   src="assets/img/media6.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media7.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media8.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media9.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media10.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media11.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
               </div>
@@ -383,69 +384,69 @@
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="d-flex flex-column flex-md-row gap-1">
+              <div class="row g-1">
                 <img
                   src="assets/img/media12.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media13.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media14.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media15.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media16.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media17.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
               </div>
             </div>
             <div class="carousel-item">
-              <div class="d-flex flex-column flex-md-row gap-1">
+              <div class="row g-1">
                 <img
                   src="assets/img/media12.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media13.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media14.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media15.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media16.webp"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
                 <img
                   src="assets/img/media17.jpg"
-                  class="col-12 col-md-2 h-auto"
+                  class="col-12 col-md-2 h-auto mb-1 mb-md-0"
                   alt="..."
                 />
               </div>
