--- a/settings.html
+++ b/settings.html
@@ -157,13 +157,13 @@
             <hr class="col-12" />
           </div>
         </div>
-        <div class="row">
-          <div class="col-4 memberShip">
+        <div class="row flex-column flex-md-row">
+          <div class="col-12 col-md-4 memberShip">
             <p>MEMBERSHIP & BILLING</p>
             <p class="btn btn-secondary">Cancel Membership</p>
           </div>
 
-          <div class="col-8">
+          <div class="col-12 col-md-8">
             <div class="container">
               <div class="row">
                 <p class="col-6">student@strive.school</p>
@@ -244,10 +244,10 @@
         </div>
 
         <div class="row">
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <p>PLAN DETAILS</p>
           </div>
-          <div class="col-4">
+          <div class="col-6 col-md-4">
             <p class="text-black">
               Premium
               <span class="border border-black border-1 text-black px-1"
@@ -255,7 +255,7 @@
               ></span>
             </p>
           </div>
-          <div class="col-4 text-end">
+          <div class="col-6 col-md-4 text-end">
             <a>Change plan</a>
           </div>
         </div>
@@ -266,7 +266,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row flex-column flex-md-row">
           <div class="col-4">
             <p>SETTINGS</p>
           </div>
@@ -289,43 +289,43 @@
         </div>
 
         <div class="row">
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <p>MY PROFILE</p>
           </div>
-          <div class="col-4">
+          <div class="col-6 col-md-4">
             <p>
               <img src="assets/img/avatar.png" class="navAvatarImg" />Utente
             </p>
           </div>
-          <div class="col-4 text-end">
+          <div class="col-6 col-md-4 text-end">
             <a class="text-decoration-none">Manage profiles</a>
             <a class="d-block text-decoration-none">Add profile email</a>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-4"></div>
-          <div class="col-4">
+          <div class="d-none d-md-block col-md-4"></div>
+          <div class="col-12 col-md-4">
             <a>Language</a>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <a>Viewing activity</a>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-4"></div>
-          <div class="col-4">
+          <div class="d-none d-md-block col-md-4"></div>
+          <div class="col-12 col-md-4">
             <a>Playback settings</a>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <a>Ratings</a>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-4"></div>
-          <div class="col-4">
+          <div class="d-none d-md-block col-md-4"></div>
+          <div class="col-12 col-md-8">
             <a>Subtitle appearance</a>
           </div>
         </div>
