--- a/index.html
+++ b/index.html
@@ -123,9 +123,15 @@
                           >Manage profiles</a
                         >
                       </li>
-                      <li><a class="dropdown-item" href="#">Account</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Help Center</a>
+                        <a class="dropdown-item" href="settings.html"
+                          >Account</a
+                        >
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="settings.html"
+                          >Help Center</a
+                        >
                       </li>
                       <li><hr class="dropdown-divider" /></li>
                       <li>
