--- a/profile.html
+++ b/profile.html
@@ -120,8 +120,14 @@
                         >Manage profiles</a
                       >
                     </li>
-                    <li><a class="dropdown-item" href="#">Account</a></li>
-                    <li><a class="dropdown-item" href="#">Help Center</a></li>
+                    <li>
+                      <a class="dropdown-item" href="settings.html">Account</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="settings.html"
+                        >Help Center</a
+                      >
+                    </li>
                     <li><hr class="dropdown-divider" /></li>
                     <li>
                       <a class="dropdown-item" href="#">Signout Netflix</a>
