--- a/settings.html
+++ b/settings.html
@@ -129,9 +129,15 @@
                           >Manage profiles</a
                         >
                       </li>
-                      <li><a class="dropdown-item" href="#">Account</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Help Center</a>
+                        <a class="dropdown-item" href="settings.html"
+                          >Account</a
+                        >
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="settings.html"
+                          >Help Center</a
+                        >
                       </li>
                       <li><hr class="dropdown-divider" /></li>
                       <li>
@@ -149,91 +155,177 @@
 
     <div class="container-fluid" id="mainSettings">
       <div class="container">
-        <div class="container">
-          <div class="row">
-            <h2 class="col-12">Account</h2>
-          </div>
-          <div class="row">
-            <hr class="col-12" />
-          </div>
+        <div class="row">
+          <h2 class="col-12">Account</h2>
         </div>
+        <div class="container-fluid">
+          <hr class="w-100" />
+        </div>
+
         <div class="d-flex flex-column flex-md-row">
-          <div>
+          <div class="col-12 col-md-3">
             <p>MEMBERSHIP & BILLING</p>
             <p class="btn btn-secondary">Cancel Membership</p>
           </div>
 
-          <div>
-            <div class="container">
-              <div class="row">
-                <p class="col-6">student@strive.school</p>
-                <a class="col-6 text-end text-decoration-none"
+          <div class="container-fluid">
+            <div class="d-flex justify-content-between">
+              <div class="d-flex flex-column">
+                <p class="m-0">student@strive.school</p>
+                <p class="m-0">Password: ******</p>
+                <p class="m-0">Phone: 123 123 123</p>
+              </div>
+              <div class="d-flex flex-column">
+                <a class="text-end text-decoration-none"
                   >Change account email</a
                 >
+                <a class="text-end text-decoration-none"> Change password</a>
+                <a class="text-end text-decoration-none">Change phone number</a>
               </div>
             </div>
-
-            <div class="container">
-              <div class="row">
-                <p class="col-6">Password: ******</p>
-                <a class="col-6 text-end text-decoration-none">
-                  Change password</a
-                >
-              </div>
-            </div>
-
-            <div class="container">
-              <div class="row">
-                <p class="col-6">Phone: 123 123 123</p>
-                <a class="col-6 text-end text-decoration-none"
-                  >Change phone number</a
-                >
-              </div>
-            </div>
-
-            <div class="container">
-              <div class="row">
-                <hr class="col-12" />
-              </div>
-            </div>
-
-            <div class="container">
-              <div class="row">
-                <p class="col-6">
+            <hr class="w-100" />
+            <div class="d-flex justify-content-between">
+              <div>
+                <p>
                   <i class="bi bi-paypal text-black"></i> admin@strive.school
                 </p>
-
-                <a class="col-6 text-end text-decoration-none"
-                  >Update payment info</a
-                >
               </div>
-              <div class="row">
-                <a class="col-12 text-end text-decoration-none">
-                  Billing details</a
-                >
-              </div>
-            </div>
-
-            <div class="container">
-              <div class="row">
-                <hr class="col-12" />
-              </div>
-            </div>
-
-            <div class="container">
-              <div class="row">
-                <a class="col-12 text-end text-decoration-none"
+              <div class="d-flex flex-column">
+                <a class="text-end text-decoration-none">Update payment info</a>
+                <a class="text-end text-decoration-none"> Billing details</a>
+                <a class="text-end text-decoration-none"
                   >Redeem gift card or promo code</a
                 >
-              </div>
-            </div>
-
-            <div class="container">
-              <div class="row">
-                <a class="col-12 text-end text-decoration-none"
+                <a class="text-end text-decoration-none"
                   >Where to buy gift cards</a
                 >
               </div>
+            </div>
+            <hr class="w-100" />
+          </div>
+        </div>
+        <div class="d-flex flex-column flex-md-row">
+          <div class="col-3">
+            <p>PLAN DETAILS</p>
+          </div>
+          <div class="container-fluid d-flex justify-content-between">
+            <div>
+              <p class="text-black">
+                Premium
+                <span class="border border-black border-1 text-black px-1"
+                  >ULTRA <i class="bi bi-badge-hd text-black"></i
+                ></span>
+              </p>
+            </div>
+            <div>
+              <a>Change plan</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="container-fluid">
+          <hr class="w-100" />
+        </div>
+
+        <div class="d-flex flex-column flex-md-row">
+          <div class="col-3">
+            <p>SETTINGS</p>
+          </div>
+          <div class="container-fluid d-flex flex-column">
+            <a>Parental controls</a>
+            <a>Test participation</a>
+            <a>Manage download devices</a>
+            <a>Activate a device</a>
+            <a>Recent device streaming activity</a>
+            <a>Sign out of all devices</a>
+          </div>
+        </div>
+
+        <div class="container-fluid">
+          <hr class="w-100" />
+        </div>
+
+        <div class="d-flex flex-column flex-md-row">
+          <div class="col-3">
+            <p>MY PROFILE</p>
+          </div>
+
+          <div class="container-fluid d-flex justify-content-between">
+            <div>
+              <p>
+                <img src="assets/img/avatar.png" class="navAvatarImg" />Utente
+              </p>
+            </div>
+
+            <div class="d-flex flex-column">
+              <a class="text-end text-decoration-none">Manage profiles</a>
+              <a class="text-end text-decoration-none">Add profile email</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-flex">
+          <div class="d-none d-md-block col-3"></div>
+          <div class="container-fluid d-flex flex-column flex-md-row gap-md-5">
+            <div class="d-flex flex-column">
+              <a class="text-decoration-none">Language</a>
+              <a class="text-decoration-none">Playback settings</a>
+              <a class="text-decoration-none">Subtitle appearance</a>
+            </div>
+            <div class="d-flex flex-column">
+              <a>Viewing activity</a>
+              <a>Ratings</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="container">
+            <div class="row"></div>
+          </div>
+
+          <div class="container">
+            <div class="row">
+              <hr class="col-12" />
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="row">
+              <p class="col-6">
+                <i class="bi bi-paypal text-black"></i> admin@strive.school
+              </p>
+
+              <a class="col-6 text-end text-decoration-none"
+                >Update payment info</a
+              >
+            </div>
+            <div class="row">
+              <a class="col-12 text-end text-decoration-none">
+                Billing details</a
+              >
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="row">
+              <hr class="col-12" />
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="row">
+              <a class="col-12 text-end text-decoration-none"
+                >Redeem gift card or promo code</a
+              >
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="row">
+              <a class="col-12 text-end text-decoration-none"
+                >Where to buy gift cards</a
+              >
             </div>
           </div>
         </div>
@@ -330,7 +422,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
