--- a/settings.html
+++ b/settings.html
@@ -158,7 +158,7 @@
         <div class="row">
           <h2 class="col-12">Account</h2>
         </div>
-        <div class="container-fluid" style="padding-left: 0">
+        <div class="container-fluid">
           <hr class="w-100" />
         </div>
 
@@ -223,7 +223,7 @@
           </div>
         </div>
 
-        <div class="container-fluid" style="padding-left: 0">
+        <div class="container-fluid">
           <hr class="w-100" />
         </div>
 
@@ -241,7 +241,7 @@
           </div>
         </div>
 
-        <div class="container-fluid" style="padding-left: 0">
+        <div class="container-fluid">
           <hr class="w-100" />
         </div>
 
